# udoc

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml  mkdocs.yml  pyproject.toml  release.toml
crates/udoc/: .public-api-baseline.txt  Cargo.toml  README.md
crates/udoc-containers/: Cargo.toml  README.md
crates/udoc-containers/src/: error.rs  lib.rs  test_util.rs
crates/udoc-containers/tests/: cfb_integration.rs  docx_smoke.rs  opc_integration.rs  xml_integration.rs  zip_integration.rs
crates/udoc-core/: .public-api-baseline.txt  Cargo.toml  README.md
crates/udoc-core/src/: backend.rs  codepage.rs  convert.rs  diagnostics.rs  error.rs  geometry.rs  image.rs  io.rs  lib.rs  limits.rs  metrics.rs  table.rs  test_harness.rs  text.rs
crates/udoc-core/tests/: proptest_nodeid.rs
crates/udoc-doc/: Cargo.toml  README.md
crates/udoc-doc/src/: convert.rs  document.rs  error.rs  fib.rs  font_table.rs  lib.rs  piece_table.rs  properties.rs  tables.rs  test_util.rs  text.rs
crates/udoc-doc/tests/: facade_integration.rs  golden_files.rs  malformed.rs  real_world.rs
crates/udoc-docx/: Cargo.toml  README.md
crates/udoc-docx/benches/: extraction.rs
crates/udoc-docx/src/: ancillary.rs  convert.rs  document.rs  error.rs  lib.rs  numbering.rs  parser.rs  styles.rs  table.rs
crates/udoc-docx/tests/: golden_files.rs  malformed.rs  real_world.rs
crates/udoc-font/: Cargo.toml  README.md
crates/udoc-font/assets/: NotoSansCJK-Subset.cff_bundle  README.md
crates/udoc-font/src/: cff.rs  cmap.rs  cmap_parser.rs  error.rs  lib.rs  math_encodings.rs  otf.rs  postscript.rs  standard_widths.rs  tounicode.rs  ttf.rs  type1.rs  type3_outline.rs  types.rs
crates/udoc-image/: Cargo.toml  README.md
crates/udoc-image/src/: ccitt.rs  colorspace.rs  lib.rs  transcode.rs
crates/udoc-markdown/: Cargo.toml  README.md
crates/udoc-markdown/src/: block.rs  block_tests.rs  document.rs  error.rs  inline.rs  inline_tests.rs  lib.rs  table.rs
crates/udoc-markdown/tests/: golden_files.rs  malformed.rs  real_world.rs
crates/udoc-odf/: Cargo.toml  README.md
crates/udoc-odf/src/: convert.rs  document.rs  error.rs  lib.rs  manifest.rs  meta.rs  odp.rs  ods.rs  odt.rs  styles.rs
crates/udoc-odf/tests/: golden_files.rs  malformed.rs  real_world.rs
crates/udoc-pdf/: Cargo.toml  README.md
crates/udoc-pdf/benches/: dictionary.rs  end_to_end.rs  interpreter.rs  lexer.rs  stream_decoder.rs  table.rs
crates/udoc-pdf/src/: convert.rs  diagnostics.rs  document.rs  error.rs  geometry.rs  image.rs  lib.rs  pattern.rs  text_decode.rs
crates/udoc-pdf/tests/: cid_metrics_disagreement.rs  corpus_integration.rs  coverage_document.rs  coverage_font.rs  download-extended-corpus.sh  encrypted_integration.rs  extended_corpus.rs  extract_fuzz_seeds.rs  font_resolution.rs  font_spike.rs  generate_corpus.rs  generate_inspect_fixture.rs  golden_files.rs  pattern_parse_integration.rs  pattern_render_integration.rs  pentest.rs  proptest_lexer.rs  public_api.rs  stress_leak.rs  subsystem_integration.rs  table_corpus.rs  table_golden.rs
crates/udoc-ppt/: Cargo.toml  README.md
crates/udoc-ppt/src/: convert.rs  document.rs  error.rs  lib.rs  persist.rs  records.rs  slides.rs  styles.rs  test_util.rs
crates/udoc-ppt/tests/: golden_files.rs  malformed.rs  real_world.rs
crates/udoc-pptx/: Cargo.toml  README.md
crates/udoc-pptx/src/: convert.rs  document.rs  error.rs  lib.rs  notes.rs  shapes.rs  table.rs  text.rs
crates/udoc-pptx/tests/: golden_files.rs  malformed.rs  real_world.rs
crates/udoc-py/: Cargo.toml  README.md  pyproject.toml
crates/udoc-py/src/: asyncio.rs  chunks.rs  config.rs  convert.rs  corpus.rs  document.rs  errors.rs  extract.rs  lib.rs  markdown.rs  render.rs  types.rs
crates/udoc-render/: Cargo.toml  README.md
crates/udoc-render/examples/: bench_hinter.rs  count_hinter_allocs.rs
crates/udoc-render/src/: annotation.rs  clip.rs  compositor.rs  font_cache.rs  inspect.rs  lib.rs  path_raster.rs  pattern.rs  png.rs  ps_hints.rs  rasterizer.rs  shading.rs
crates/udoc-rtf/: Cargo.toml  README.md
crates/udoc-rtf/src/: codepage.rs  convert.rs  document.rs  error.rs  image.rs  lexer.rs  lib.rs  parser.rs  parser_tests.rs  state.rs  table.rs
crates/udoc-rtf/tests/: golden_files.rs  malformed.rs  proptest_codepage.rs  real_world.rs
crates/udoc-xls/: Cargo.toml  README.md
crates/udoc-xls/src/: cells.rs  convert.rs  document.rs  error.rs  formats.rs  lib.rs  records.rs  sst.rs  test_util.rs  workbook.rs
crates/udoc-xls/tests/: golden_files.rs  malformed.rs  real_world.rs
crates/udoc-xlsx/: Cargo.toml  README.md
crates/udoc-xlsx/src/: cell_ref.rs  convert.rs  document.rs  error.rs  formats.rs  lib.rs  merge.rs  shared_strings.rs  sheet.rs  styles.rs  workbook.rs
crates/udoc-xlsx/tests/: corpus_test.rs  golden_files.rs  malformed.rs  real_world.rs  realworld_corpus_test.rs
crates/udoc/examples/: extract.rs  extract_any.rs  extract_tables.rs  hooks.rs  render.rs  streaming.rs
crates/udoc/src/: backend_trait.rs  config.rs  convert.rs  detect.rs  doc_backend.rs  docx_backend.rs  extractor.rs  lib.rs  main.rs  md_backend.rs  odf_backend.rs  pdf_backend.rs  ppt_backend.rs  pptx_backend.rs  render.rs  rtf_backend.rs  xls_backend.rs  xlsx_backend.rs
crates/udoc/tests/: api.rs  cli.rs  cli_golden.rs  cli_golden_dev_tools.rs  cli_intro.rs  clip_rendering.rs  cross_format.rs  diagnostics_bridge.rs  diagnostics_default.rs  docx_integration.rs  error_messages.rs  golden_annotations.rs  golden_facade.rs  golden_glyphs.rs  golden_gradients.rs  golden_pages.rs  golden_paths.rs  golden_pattern.rs  hook_integration.rs  hooks.rs  hooks_stress.rs  hyperlinks.rs  images.rs  markdown_integration.rs  markdown_output_round_trip.rs  memory_plateau.rs  odf_integration.rs  page_bundle.rs  pattern_corpus_smoke.rs  ppt_integration.rs  pptx_golden.rs  pptx_integration.rs  presentation.rs  render.rs  render_color_consistency.rs  render_diff.rs  render_inspect.rs  render_re_exports.rs  rosetta.rs  rtf_integration.rs  (+9 more)
(+439 files in other folders)
