[package]
name = "udoc-containers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Container format parsers (ZIP, XML, CFB) for the udoc toolkit"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["zip", "xml", "cfb", "ole2", "ooxml"]
categories.workspace = true
exclude = ["tests/**"]

[features]
test-internals = []

[dependencies]
udoc-core = { path = "../udoc-core", version = "0.1.0-alpha.1" }
crc32fast = "1"
flate2 = { workspace = true }
memchr = "2"

[dev-dependencies]
udoc-containers = { path = ".", version = "0.1.0-alpha.1", features = ["test-internals"] }

[lints]
workspace = true
