[package]
name = "udoc-ppt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "PowerPoint binary (.ppt) backend for udoc"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["ppt", "powerpoint", "text-extraction", "parser", "document"]
categories.workspace = true
exclude = [
    "tests/**",
]

[dependencies]
udoc-core = { path = "../udoc-core", version = "0.1.0-alpha.1" }
udoc-containers = { path = "../udoc-containers", version = "0.1.0-alpha.1" }
encoding_rs = { workspace = true }

[dev-dependencies]
udoc-core = { path = "../udoc-core", version = "0.1.0-alpha.1", features = ["test-internals"] }
udoc-containers = { path = "../udoc-containers", version = "0.1.0-alpha.1", features = ["test-internals"] }
udoc-ppt = { path = ".", version = "0.1.0-alpha.1", features = ["test-internals"] }

[features]
default = []
test-internals = ["udoc-containers/test-internals"]

[lints]
workspace = true
