[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "udoc"
version = "0.0.1"
description = "Python bindings for udoc (spike,)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "newelh" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing",
]

[project.urls]
Repository = "https://github.com/newelh/udoc"

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "Cargo.toml"
module-name = "udoc"
# Strip the cdylib for smaller wheels. Workspace already does this for
# release, but maturin builds outside that profile so we re-state.
strip = true
