[package]
name = "udoc-rtf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "RTF text extraction backend for the udoc document toolkit"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["rtf", "text-extraction", "parser", "document"]
categories.workspace = true
exclude = [
    "tests/**",
]

[dependencies]
udoc-core = { path = "../udoc-core", version = "0.1.0-alpha.1" }
encoding_rs = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
udoc-core = { path = "../udoc-core", version = "0.1.0-alpha.1", features = ["test-internals"] }

[features]
default = []
test-internals = []

[lints]
workspace = true
